[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-server"
version = "0.1.0"
description = "Tunnel server for forwarding external connections to agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tunnel-server = "server_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["server_app*"]

